Feature RTE loses tags, doc strings, outlines and appends backgrounds